--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "firebase": "^8.6.8",
     "next": "11.0.0",
     "react": "17.0.2",
