--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "eslint-config-next": "^11.0.1",
     "firebase": "^8.6.8",
     "next": "11.0.0",
     "react": "17.0.2",
