--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.0.0",
+    "react-modal": "^3.14.3",
     "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
+    "@types/react-modal": "^3.12.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.29.0",
