--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-next": "^11.0.1",
     "firebase": "^8.6.8",
     "next": "11.0.0",
+    "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.0.0",
